objects/Salesforce_paid_training__c.object
<CustomObject>
    <label>Salesforce paid training</label>
    <nameField>
        <label>Salesforce Trainer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce paid training</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_name__c</fullName>
        <label>Student name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_email_id__c</fullName>
        <label>Student email id</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_contact_number__c</fullName>
        <label>Student contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overal_academic_percentage__c</fullName>
        <description>Please enter 50 percentage below only</description>
        <label>Overal academic percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <recordTypes>
        <fullName>Admin</fullName>
        <active>true</active>
        <description>only for admin students</description>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Development_taining_student</fullName>
        <active>false</active>
        <label>Development taining student</label>
    </recordTypes>
    <validationRules>
        <fullName>Error_message</fullName>
        <active>true</active>
        <errorConditionFormula>Overal_academic_percentage__c &gt; 0.60</errorConditionFormula>
        <errorDisplayField>Overal_academic_percentage__c</errorDisplayField>
        <errorMessage>Please enter above 60 perentage</errorMessage>
    </validationRules>
</CustomObject>